--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,17 +1,19 @@
 label {
     display: block;
     text-align: center;
+    font-size: 40px;
 }
 
 
 .ICON {
-    margin-left : 18%;
+    margin-left : 16%;
 }
 
 
 .Icon {
-    width : 200px;
-    height : 150px;
+    width : 26%;
+    height : 15vh;
     float: left;
-    margin : 5%;
+    margin : 3%;
+    margin-bottom : 6%;
 }
